// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorReporter indicateErrorWithLocation should output location of errors in human readable format 1`] = `
"main.ts:2:25 - some error

1 
2           const query = invalidQuery;
                          ~~~~~~~~~~~~
"
`;

exports[`ErrorReporter indicateErrorWithLocation should output location of errors in human readable format with 2 lines 1`] = `
"main.ts:3:19 - some error

2           const query = gql\`;
3             query MyQuery {
                    ~~~~~~~~~
4               name
  ~~~~~~~~~~~~~~~~~~
5             }
"
`;

exports[`ErrorReporter indicateErrorWithLocation should output location of errors in human readable format with 3 or more lines 1`] = `
"main.ts:3:19 - some error

2           const query = gql\`;
3             query MyQuery {
                    ~~~~~~~~~
4               id
  ~~~~~~~~~~~~~~~~
5               name
  ~~~~~~~~~~~~~~~~~~
6             }
"
`;
